@@ -3304,8 +3304,10 @@ retry:
 		if (tor)
 			session_log("prioritizing DHT announce: \"%s\"", tor->name().c_str());
 #endif
-		// trigger a DHT announce right away if we just
-		// added a new torrent and there's no back-log
+		// trigger a DHT announce right away if we just added a new torrent and
+		// there's no back-log. in the timer handler, as long as there are more
+		// high priority torrents to be announced to the DHT, it will keep the
+		// timer interval short until all torrents have been announced.
 		if (m_dht_torrents.size() == 1)
 		{
 #if defined TORRENT_ASIO_DEBUGGING
